k8s/gateway/rate-limit.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: rate-limit
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: shared
  loadBalancer:
    type: LeastRequest
  rateLimit:
    type: Global
    global:
      rules:
        - limit:
            requests: 500
            unit: Minute
